--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "author": "Lucas Parsy",
   "license": "MIT",
   "dependencies": {
+    "@types/better-sqlite3": "^3.1.3",
     "better-sqlite3": "^4.1.4",
-    "discord.js": "^11.3.2",
-    "typescript": "^2.9.2",
-    "uws": "^10.148.1"
+    "discord.js": "^11.4.2",
+    "typescript": "^3.0.3",
+    "uws": "^10.148.2"
   },
   "devDependencies": {
-    "@types/node": "^10.5.4"
+    "@types/node": "^10.9.3"
   }
 }
