continue refactor of project
converted all the JS files to Typescript
corrected countless bugs, changed variable names, removed some.

kept TS option "suppressImplicitAnyIndexErrors" to true,
because some of my hacks trigger this error, and I won't refactor it
yet...
it 's for accessing object members with strings like object[myString]...

Unit test has errors I won't correct, because it sends mockup Guild
objects instead of true ones.
I won't include mockup definitions in the project itself, it's not how
it should be!

Unit test broken for now, because of a change in Channels and roles find methed.

still have to rename and move all the files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
     "suppressImplicitAnyIndexErrors": true,
+
+    "exclude": [
+	"./unitTest.ts"
+    ]
+
+
       // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
     // "strictNullChecks": true,              /* Enable strict null checks. */
     // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
