--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A bot to manage vocal debates on your server.Create a waitlist for people to join the channel, check and manage their speaking time, and more!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "node unitTest.js",
+      "start": "node index.js"
   },
   "keywords": [
     "Discord",
