--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "pluriphony",
   "version": "0.0.1",
   "description": "A bot to manage vocal debates on your server.Create a waitlist for people to join the channel, check and manage their speaking time, and more!",
-  "main": "src/index.js",
+  "main": "src/main.js",
   "scripts": {
-      "test": "node unitTest.js",
-      "start": "node index.js"
+      "test": "node test/unitTest.js",
+      "start": "node src/main.js"
   },
   "keywords": [
     "Discord",
